# AI_Assist

./: .gitignore  LICENSE  README.md  SETUP_SUMMARY.md  fast-whisper-sample.py  freetalk-iu.py  freetalk-sample.py  freetalk.py  mecab_wrapper.py  pyproject.toml  run.sh  run_sample_cpu.py  sample.py
